z-index update didn't display correctly on mobile

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -349,7 +349,7 @@ section.wines h3 {
 .homeBackground {
   filter: blur(2px);
   opacity: 0.7;
-  z-index: -1;
+  z-index: -2;
 }
 .openTableDiners {
   overflow: hidden;
